// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "/api/auth",
      Object {
        "credentials": "same-origin",
        "method": "DELETE",
      },
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[` 2`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "/api/user/current",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;
